--- a/signup/src/main/resources/application.yml
+++ b/signup/src/main/resources/application.yml
@@ -6,11 +6,12 @@ server:
 
 spring:
   datasource:
-    url: mysql://localhost:3306/account
-    password: 1234
-    username: root
+    url: jdbc:mysql://localhost:12345/account
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      username: root
+      password: 1234
   jpa:
-    hibernate:
-      ddl-auto: create-drop
     show-sql: true
+    hibernate:
+      ddl-auto: 'validate'
