--- a/signup/src/main/resources/application.yml
+++ b/signup/src/main/resources/application.yml
@@ -15,7 +15,7 @@ springdoc:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:12345/account
+    url: jdbc:mysql://host.docker.internal:12345/account
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       username: root
@@ -23,7 +23,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: 'validate'
+      ddl-auto: 'update'
 
 env:
   secret-key: "taxijjangsecretkey"
