--- a/signup/src/main/resources/application.yml
+++ b/signup/src/main/resources/application.yml
@@ -13,17 +13,29 @@ springdoc:
   default-produces-media-type: application/json
   packages-to-scan: com.quriously.signup
 
+#spring:
+#  datasource:
+#    url: jdbc:mysql://host.docker.internal:12345/account
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    hikari:
+#      username: root
+#      password: 1234
+#  jpa:
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: 'update'
+
 spring:
   datasource:
-    url: jdbc:mysql://host.docker.internal:12345/account
-    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
-      username: root
-      password: 1234
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: 'update'
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:testdb
+      username: sa
+      password:
+    jpa:
+      show-sql: true
+      hibernate:
+        ddl-auto: 'update'
 
 env:
   secret-key: "taxijjangsecretkey"
